--- a/style.css
+++ b/style.css
@@ -52,12 +52,15 @@ li a {
 }
 
 .footer {
-  background-color: #EDEDED;
-  color: #646464;
-  font-size: 13px;
-  padding; 5px;
+  background:#f2f2f2;
+  border-top:1px solid #e4e4e4;
+  line-height:40px;
+  min-width:980px
+  color: #777;
 }
-
+.footer a:hover {
+  text-decoration: underline;
+}
 .avatar {
   background-image: url("https://lh6.googleusercontent.com/-_9HeiZu91nk/AAAAAAAAAAI/AAAAAAAAEV0/P17SE8RIBs8/s72-c-k-no/photo.jpg");
 }
@@ -126,3 +129,17 @@ button:hover {
   height: 40px;
 }
 
+#right {
+  display: block;
+  float: right;
+  margin-right:30px;
+}
+#left {
+  margin-left:30px;
+}
+
+.flink {
+  color: #777;
+  padding-left:27px;
+  margin:0 !important;
+}
